# pyproject.toml

[project]
name = "shahedy_bot"
version = "0.1.0"
description = "Track shahedy and receive alerts if one is nearby."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "dotenv>=0.9.9",
    "gallery-dl>=1.30.10",
    "yt-dlp>=2025.10.14",
    "ffmpeg",
    "gallery-dl"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
